--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,14 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 .idea/*
-web/server/node_modules/*
 venv/*
 res/book/generation/*
 res/book/genre/*
 res/output/*
 res/feature/*
 res/dbpedia/*
+web/node_modules/*
+web/source/.idea/*
 
 src/user_dic.txt
 
