--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "iconv": "^3.0.0",
     "multer": "^1.4.2",
     "python-shell": "^2.0.1"
   }
